# Ambient-Weather-API-Connector

./: .gitignore  LICENSE  pyproject.toml
src/ambient_weather_api/: connection.py
src/ambient_weather_api/datatypes/: device.py  weather_data.py
unit_tests/: test_connection.py  test_integration.py  test_types.py
